# wake_word_detection

./: Cargo.toml  LICENSE  README.md  simple_eda_train.ipynb
data/: train.csv
src/: handlers.rs  main.rs
train/: simple_eda_train.ipynb
