[package]
name = "wake_word_detection"
version = "0.1.0"
authors = ["Ramakrishnan Radhakrishnan <ramk@chadura.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-rt = "1.0.0"
actix-web = "3.3.2"
config = "0.10.1"
dotenv = "0.15.0"

